[package]
name = "hyper-microservice"
version = "0.1.0"
authors = ["jswizzy <smithj@g.cofc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.4"
slab = "0.4.2"
lazy_static = "1.4.0"
regex = "1.3.5"
log = "0.4.8"
clap = "2.33.0"
dotenv = "0.15.0"
